# elasticsearch-dsl-rs

./: .gitignore  CODEOWNERS  CONTRIBUTORS.md  Cargo.toml  LICENSE-MIT  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CI.yml  quickstart.yml  update-contributors.yml
examples/: README.md
examples/aggregations/: Cargo.toml
examples/boolean-query/: Cargo.toml
examples/completion-suggester/: Cargo.toml
examples/domain-specific-dsl/: Cargo.toml
examples/handle-search-response/: Cargo.toml
examples/handle-search-response/src/: main.rs
examples/simple-query/: Cargo.toml
src/: lib.rs  macros.rs  response.rs  search.rs  ser.rs  types.rs  util.rs
src/aggregations/: mod.rs
src/analyze/: mod.rs  request.rs  response.rs
src/highlight/: boundary_scanner.rs  highlighter.rs  mod.rs  order.rs
src/params/: scalar.rs  search.rs
src/queries/: bool_query.rs  boosting_query.rs  constant_score_query.rs  dis_max_query.rs  distance_feature_query.rs  exists_query.rs  function_score_query.rs  fuzzy_query.rs  ids_query.rs  match_all_query.rs  match_bool_prefix_query.rs  match_none_query.rs  match_phrase_prefix_query.rs  match_phrase_query.rs  match_query.rs  mod.rs  more_like_this_query.rs  multi_match_query.rs  nested_query.rs  percolate_query.rs  prefix_query.rs  range_query.rs  rank_feature_query.rs  regexp_query.rs  term_query.rs  terms_query.rs  terms_set_query.rs  wildcard_query.rs
src/rescoring/: mod.rs
src/search/: mod.rs  request.rs  response.rs
src/sort/: mod.rs
src/util/: assert_serialize.rs  join_with_pipe.rs  key_value_pair.rs  (+2 more)
(+247 files in other folders)
