[package]
name = "elasticsearch-dsl"
version = "0.3.9"
authors = ["Boost <boost@vinted.com>"]
edition = "2018"
description = "Strongly typed Elasticsearch DSL"
repository = "https://github.com/vinted/elasticsearch-dsl-rs"
documentation = "https://docs.rs/elasticsearch-dsl/"
license = "MIT OR Apache-2.0"

[workspace]
members = ["examples/*"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

[dev-dependencies]
pretty_assertions = { version = "1" }
