[package]
name = "handle-search-response"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch-dsl = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
